--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,20 @@
 version: "3.8"
 
 services:
+
+  db-service:
+    build:
+      context: ../services/db-service
+      dockerfile: dockerfile.dev
+    container_name: db-service-dev
+    ports:
+      - "5432:3000"
+    volumes:
+      - ../services/db-service:/app
+    environment:
+      NODE_ENV: development
+    working_dir: /app
+
   auth-service:
     build:
       context: ../services/auth-service
