--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,8 @@ services:
       - "5434:8201"
     cap_add:
       - IPC_LOCK
+    networks:
+      - metrics_network
   vault-seeder:
     build:
       context: ./vault/seeder
@@ -20,7 +22,7 @@ services:
     build:
       context: ../services/db-service
       dockerfile: dockerfile.dev
-    container_name: db-service-dev
+    container_name: db-service
     ports:
       - "5432:3000"
     volumes:
@@ -28,12 +30,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   auth-service:
     build:
       context: ../services/auth-service
       dockerfile: dockerfile.dev
-    container_name: auth-service-dev
+    container_name: auth-service
     ports:
       - "4001:3000"
     volumes:
@@ -41,12 +45,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   chat-service:
     build:
       context: ../services/chat-service
       dockerfile: dockerfile.dev
-    container_name: chat-service-dev
+    container_name: chat-service
     ports:
       - "4002:3000"
     volumes:
@@ -54,12 +60,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   gateway-service:
     build:
       context: ../services/gateway-service
       dockerfile: dockerfile.dev
-    container_name: gateway-service-dev
+    container_name: gateway-service
     ports:
       - "4003:3000"
     volumes:
@@ -67,12 +75,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   lobby-service:
     build:
       context: ../services/lobby-service
       dockerfile: dockerfile.dev
-    container_name: lobby-service-dev
+    container_name: lobby-service
     ports:
       - "4004:3000"
     volumes:
@@ -80,12 +90,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   matchmaking-service:
     build:
       context: ../services/matchmaking-service
       dockerfile: dockerfile.dev
-    container_name: matchmaking-service-dev
+    container_name: matchmaking-service
     ports:
       - "4005:3000"
     volumes:
@@ -93,12 +105,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   notification-service:
     build:
       context: ../services/notification-service
       dockerfile: dockerfile.dev
-    container_name: notification-service-dev
+    container_name: notification-service
     ports:
       - "4006:3000"
     volumes:
@@ -106,12 +120,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   tournament-service:
     build:
       context: ../services/tournament-service
       dockerfile: dockerfile.dev
-    container_name: tournament-service-dev
+    container_name: tournament-service
     ports:
       - "4007:3000"
     volumes:
@@ -119,12 +135,14 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
 
   user-service:
     build:
       context: ../services/user-service
       dockerfile: dockerfile.dev
-    container_name: user-service-dev
+    container_name: user-service
     ports:
       - "4008:3000"
     volumes:
@@ -132,6 +150,40 @@ services:
     environment:
       NODE_ENV: development
     working_dir: /app
+    networks:
+      - metrics_network
+
+  prometheus-module:
+    build:
+      context: ./prometheus
+      dockerfile: dockerfile.dev
+    container_name: prometheus-module
+    ports:
+      - "9090:9090"
+    networks:
+      - metrics_network
+
+  grafana-module:
+    build:
+      context: ./grafana
+      dockerfile: dockerfile.dev
+    container_name: grafana-module
+    ports:
+      - "9000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - prometheus-module
+    networks:
+      - metrics_network
+    environment:
+      - GF_SECURITY_ADMIN_USER=dev
+      - GF_SECURITY_ADMIN_PASSWORD=devpass
 
 volumes:
-  vault-dev-data:
+  vault-data:
+  grafana-data:
+
+networks:
+  metrics_network:
+    driver: bridge
