--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,55 +4,67 @@ services:
       context: ./vault
       dockerfile: dockerfile
     container_name: vault-module
-    ports:
-      - "5433:8200"
-      - "5434:8201"
-    environment:
-      VAULT_API_ADDR: 'http://vault-module:8200'
     cap_add:
       - IPC_LOCK
-    volumes:
-      - ./vault/data:/vault/data
-      - ./vault/certs:/vault/certs:ro
-    command: server
+    networks:
+      - metrics_network
+      - internal_network
+  vault-seeder:
+    build:
+      context: ./vault/seeder
+      dockerfile: seeder.dev.dockerfile
+    depends_on:
+      - vault-module
+    network_mode: "service:vault-module"
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: dockerfile
+    image: ftpreavis/frontend:latest
+    restart: always
+    ports:
+      - "8080:80"
   db-service:
     build:
       context: ../services/db-service
       dockerfile: dockerfile
     container_name: db-service
-    ports:
-      - "5432:3000"
     volumes:
       - ../services/db-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   auth-service:
     build:
       context: ../services/auth-service
       dockerfile: dockerfile
     container_name: auth-service
-    ports:
-      - "4001:3000"
     volumes:
       - ../services/auth-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   chat-service:
     build:
       context: ../services/chat-service
       dockerfile: dockerfile
     container_name: chat-service
-    ports:
-      - "4002:3000"
     volumes:
       - ../services/chat-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   gateway-service:
     build:
@@ -60,77 +72,119 @@ services:
       dockerfile: dockerfile
     container_name: gateway-service
     ports:
-      - "4003:3000"
+      - "4008:3000"
     volumes:
       - ../services/gateway-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   lobby-service:
     build:
       context: ../services/lobby-service
       dockerfile: dockerfile
     container_name: lobby-service
-    ports:
-      - "4004:3000"
     volumes:
       - ../services/lobby-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   matchmaking-service:
     build:
       context: ../services/matchmaking-service
       dockerfile: dockerfile
     container_name: matchmaking-service
-    ports:
-      - "4005:3000"
     volumes:
       - ../services/matchmaking-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   notification-service:
     build:
       context: ../services/notification-service
       dockerfile: dockerfile
     container_name: notification-service
-    ports:
-      - "4006:3000"
     volumes:
       - ../services/notification-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   tournament-service:
     build:
       context: ../services/tournament-service
       dockerfile: dockerfile
     container_name: tournament-service
-    ports:
-      - "4007:3000"
     volumes:
       - ../services/tournament-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
 
   user-service:
     build:
       context: ../services/user-service
       dockerfile: dockerfile
     container_name: user-service
-    ports:
-      - "4008:3000"
     volumes:
       - ../services/user-service:/app
     environment:
       NODE_ENV: production
     working_dir: /app
+    networks:
+      - metrics_network
+      - internal_network
+
+  prometheus-module:
+    build:
+      context: ./prometheus
+      dockerfile: dockerfile
+    container_name: prometheus-module
+    ports:
+      - "9090:9090"
+    networks:
+      - metrics_network
+
+  grafana-module:
+    build:
+      context: ./grafana
+      dockerfile: dockerfile
+    container_name: grafana-module
+    ports:
+      - "9000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - prometheus-module
+    networks:
+      - metrics_network
+    environment:
+      - GF_SECURITY_ADMIN_USER=dev
+      - GF_SECURITY_ADMIN_PASSWORD=devpass
 
 volumes:
-  vault-prod-data:
+  vault-data:
+  grafana-data:
+
+networks:
+  metrics_network:
+    driver: bridge
+  internal_network:
+    driver: bridge
