--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - vault-data:/vault
-      - vault-certs:/vault/certs:ro
+      - /srv/ft_preavis/data/vault/data:/vault
+      - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
       - ./vault/config/vault-prod.hcl:/vault/config/vault.hcl:ro
     environment:
       - SKIP_SETCAP=false
@@ -35,7 +35,7 @@ services:
 
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - vault-certs:/vault/certs:ro
+      - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
 
     networks:
       - internal_network
@@ -217,7 +217,7 @@ services:
     user: "0:0"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus-data:/prometheus
+      - /srv/ft_preavis/data/prometheus/data:/prometheus
     ports:
       - "9090:9090"
     networks:
@@ -231,37 +231,11 @@ services:
     ports:
       - "9000:3000"
     volumes:
-      - grafana-data:/var/lib/grafana
+      - /srv/ft_preavis/data/grafana/data:/var/lib/grafana
     depends_on:
       - prometheus-module
     networks:
       - metrics_network
-
-volumes:
-  vault-data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /srv/ft_preavis/data/vault/data
-  vault-certs:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /srv/ft_preavis/data/vault/certs
-  grafana-data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /srv/ft_preavis/data/grafana/data
-  prometheus-data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /srv/ft_preavis/data/prometheus/data
 
 networks:
   metrics_network:
