--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,12 @@ services:
     restart: always
     ports:
       - "127.0.0.1:4443:80"
-
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
-
     networks:
       - internal_network
+      - metrics_network
   frontend:
     build:
       context: ../frontend
