--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
+      - /srv/ft_preavis/data/nginx/logs:/var/log/nginx
     networks:
       - internal_network
       - metrics_network
