--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,10 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-    # 1) Map incoming Host to an “upstream” name
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    
     map $host $upstream {
         default                     frontend;
         vault.*                     vault;
@@ -10,7 +13,10 @@ http {
         prometheus.*                prometheus;
     }
 
-    # 2) Define each backend by its container name and port
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+
     upstream vault       { server vault-module:8200; }
     upstream grafana     { server grafana-module:3000; }
     upstream prometheus  { server prometheus-module:9090; }
@@ -22,19 +28,17 @@ http {
         server_name  transcendance.charles-poulain.ovh
                      *.transcendance.charles-poulain.ovh;
 
-        # 3) Redirect vault root → /ui/
         if ($host ~ ^vault\.) {
             rewrite ^/$ /ui/ redirect;
         }
 
-		location /api/ {
+	location /api/ {
             proxy_pass          http://gateway$request_uri;
             proxy_set_header    Host               $host;
             proxy_set_header    X-Real-IP          $remote_addr;
             proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
         }
 
-        # 4) Vault UI and assets (speaks HTTPS to Vault)
         location /ui/ {
             proxy_pass          https://vault-module:8200/ui/;
             proxy_set_header    Host              $host;
@@ -42,7 +46,6 @@ http {
             proxy_ssl_verify    off;
         }
 
-        # 5) All other paths → upstream from the map
         location / {
             proxy_pass          http://$upstream$request_uri;
             proxy_set_header    Host               $host;
