Feature: Production working. TODO : Prometheus api redirection, grafana checks, prometheus accessible only within a securized route / authed. Vault setup.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
     
     map $host $upstream {
+        hostnames;
         default                     frontend;
         vault.*                     vault;
         grafana.*                   grafana;
@@ -32,7 +33,7 @@ http {
             rewrite ^/$ /ui/ redirect;
         }
 
-	location /api/ {
+	    location /api/ {
             proxy_pass          http://gateway$request_uri;
             proxy_set_header    Host               $host;
             proxy_set_header    X-Real-IP          $remote_addr;
@@ -44,6 +45,13 @@ http {
             proxy_set_header    Host              $host;
             proxy_ssl_server_name on;
             proxy_ssl_verify    off;
+        }
+
+        location ^~ /v1/ {
+            proxy_pass https://vault-module:8200$request_uri;
+            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
         }
 
         location / {
