--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,12 +6,19 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     
-    map $host $upstream {
+    map $host $backend {
         hostnames;
-        default                     frontend;
         vault.*                     vault;
         grafana.*                   grafana;
         prometheus.*                prometheus;
+        default                     frontend;
+    }
+
+    map $host $api_backend {
+        hostnames;
+
+        transcendance.charles-poulain.ovh   gateway;
+        default                             $backend;
     }
 
     access_log /var/log/nginx/access.log main;
@@ -32,14 +39,6 @@ http {
         if ($host ~ ^vault\.) {
             rewrite ^/$ /ui/ redirect;
         }
-
-	    location /api/ {
-            proxy_pass          http://gateway$request_uri;
-            proxy_set_header    Host               $host;
-            proxy_set_header    X-Real-IP          $remote_addr;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
-        }
-
         location /ui/ {
             proxy_pass          https://vault-module:8200/ui/;
             proxy_set_header    Host              $host;
@@ -54,11 +53,18 @@ http {
             proxy_ssl_verify off;
         }
 
-        location / {
-            proxy_pass          http://$upstream$request_uri;
+	    location ^~ /api/ {
+            proxy_pass          http://$api_backend$request_uri;
             proxy_set_header    Host               $host;
             proxy_set_header    X-Real-IP          $remote_addr;
             proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        }
+
+        location / {
+            proxy_pass          http://$backend$request_uri;
+            proxy_set_header    Host            $host;
+            proxy_set_header    X-Real-IP       $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
