--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - /srv/ft_preavis/data/vault/data:/vault
+      - /srv/ft_preavis/data/vault/data:/vault/data
       - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
       - ./vault/config/vault-prod.hcl:/vault/config/vault.hcl:ro
     environment:
       - SKIP_SETCAP=false
-      - VAULT_ADDR="http://0.0.0.0:8200"
+      - VAULT_ADDR=https://vault.transcendance.charles-poulain.ovh
     restart: always
 
   nginx-proxy:
