--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,9 +212,13 @@ services:
     user: "0:0"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - /srv/ft_preavis/prometheus/web.yml:/etc/prometheus/web.yml:ro
       - /srv/ft_preavis/data/prometheus/data:/prometheus
     ports:
       - "9090:9090"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--web.config.file=/etc/prometheus/web.yml"
     networks:
       - metrics_network
       - internal_network
