Fix: Prometheus path and db-service persist

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     working_dir: /app
     environment:
       NODE_ENV: production
+    volumes:
+      - /srv/ft_preavis/data/services/db-service/database.db:prisma/database.db
     expose:
       - "3000"
     networks:
