--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,6 @@ services:
     cap_add:
       - IPC_LOCK
     networks:
-      - metrics_network
       - internal_network
 
   vault-seeder:
@@ -49,7 +48,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   auth-service:
@@ -65,7 +63,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   chat-service:
@@ -81,7 +78,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   gateway-service:
@@ -97,7 +93,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   lobby-service:
@@ -113,7 +108,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   matchmaking-service:
@@ -129,7 +123,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   notification-service:
@@ -145,7 +138,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   tournament-service:
@@ -161,7 +153,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   user-service:
@@ -177,7 +168,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   media-service:
@@ -193,7 +183,6 @@ services:
       NODE_ENV: development
     working_dir: /app
     networks:
-      - metrics_network
       - internal_network
 
   prometheus-module:
@@ -202,7 +191,7 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - metrics_network
+      - internal_network
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
 
@@ -218,7 +207,7 @@ services:
     depends_on:
       - prometheus-module
     networks:
-      - metrics_network
+      - internal_network
     environment:
       - GF_SECURITY_ADMIN_USER=dev
       - GF_SECURITY_ADMIN_PASSWORD=devpass
@@ -229,7 +218,5 @@ volumes:
 
 
 networks:
-  metrics_network:
-    driver: bridge
   internal_network:
     driver: bridge
